# sudoku-solvers

./: .gitignore  LogicSolver.hs  Makefile  README.md  Sudoku.hs  SudokuTest.hs  SudokuTestQC.hs  few-puzzles.txt  sudoku.cabal  terminology.txt
src/: AlgoXSolver.hs  LogicSolver.hs  Sudoku.hs
src/LogicSolver/: BasicFish.hs  MedusaColoring.hs  SimpleColoring.hs  Utils.hs  YWing.hs
tests/: SudokuTestQC.hs  TestData.hs
