name:                sudoku

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             1.0.0.0

synopsis:            Several Sudoku Solvers
homepage:            https://github.com/ajenkinski/sudoku-solvers

-- license-file:        LICENSE

author:              Adam Jenkins

maintainer:          adam@thejenkins.org

-- copyright:           

category:            Game

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

library
  exposed-modules: Sudoku
  build-depends: base, array, pretty, deepseq
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -W

executable LogicSolver
  -- .hs or .lhs file containing the Main module.
  main-is:             LogicSolver.hs
  
  -- Modules included in this executable, other than Main.
  other-modules: 
    LogicSolver.Utils, 
    LogicSolver.SimpleColoring, 
    LogicSolver.YWing, 
    LogicSolver.BasicFish, 
    LogicSolver.MedusaColoring
  
  -- LANGUAGE extensions used by modules in this package.
  --  other-extensions:
  
  -- Other library packages from which modules are imported.
  build-depends:       sudoku, base, containers, parallel, array, pretty, deepseq, mtl, fgl
  
  -- Directories containing source files.
  hs-source-dirs: src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010

  ghc-options: -threaded -W
  
executable AlgoXSolver
  -- .hs or .lhs file containing the Main module.
  main-is:             AlgoXSolver.hs
  
  -- Modules included in this executable, other than Main.
  -- other-modules:
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    DeriveGeneric, DeriveAnyClass
  
  -- Other library packages from which modules are imported.
  build-depends: sudoku, base, containers, parallel, array, pretty, deepseq
  
  -- Directories containing source files.
  hs-source-dirs: src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options: -threaded -W
 

Test-Suite test-sudoku
  type: exitcode-stdio-1.0
  main-is: SudokuTestQC.hs
  other-modules: TestData
  hs-source-dirs: src, tests
  build-depends: sudoku, base, containers, parallel, array, pretty, deepseq, QuickCheck
  default-language:    Haskell2010

